# pico-scd41-co2-meter

./: CMakeLists.txt  README.md  main.c  sensirion_config.h  sensirion_i2c_hal.c
hardware/: pico-scd4x-co2-monitor.bak  pico-scd4x-co2-monitor.kicad_sym
hardware/3D Models/: 7-Segment Display 4-Digit (5641).step  XZxxxx45.step
hardware/pico-scd4x-co2-monitor.pretty/: 5641AH.kicad_mod  RPi_Pico_SMD.kicad_mod  SCD41DR2.kicad_mod
hardware/pico_scd4x_co2_monitor_v1/: fp-info-cache  fp-lib-table  pico_scd4x_co2_monitor_v1.kicad_pcb  pico_scd4x_co2_monitor_v1.kicad_prl  pico_scd4x_co2_monitor_v1.kicad_pro  pico_scd4x_co2_monitor_v1.kicad_sch  scd41.kicad_sym  sym-lib-table
hardware/stand/: pico_co2_meter_legs_v1-Body.stl  pico_co2_meter_legs_v1.FCStd  pico_co2_meter_legs_v1.FCStd1
